# FMT

./: .gitignore  Cargo.toml  README.md
.sisyphus/plans/: architecture-2026-05-25.md
crates/agent/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: wat2wasm.rs
crates/agent-core/src/: calibration.rs  dump.rs  format.rs  lib.rs  logfile.rs  mem_value.rs  mem_write.rs  metadata.rs  (+6 more)
crates/agent/src/: bedrock_glue.rs  bson.rs  dump_writer.rs  entry.rs  hook.rs  host.rs  il2cpp_config.rs  il2cpp_ffi.rs  inline_detour.rs  lib.rs  mem_probe.rs  mem_scan.rs  packet.rs  paths.rs  real_runtime.rs  region_map.rs  type_resolve.rs  wasm_host.rs  win.rs
crates/agent/src/diagnostics/: export_dump.rs  klass_probe.rs  mem_probe.rs  methodinfo_probe.rs  mod.rs  valuetype_probe.rs
crates/agent/src/internals/: api.rs  config.rs  ctx.rs  dump.rs  ffi.rs  marshal.rs  mod.rs  resolve.rs
crates/agent/src/internals/calibration/: anchors.rs  candidates_local.rs  ffi_verify.rs  field_param_layout.rs  klass_layout.rs  metadata_version.rs  method_layout.rs  mod.rs  stability.rs  type_discrim.rs
crates/agent/src/internals/hook_runtime/: api.rs  dispatcher.rs  mod.rs  regargs.rs  registry.rs  replay.rs  shim.rs  thunks.rs
crates/agent/src/protocol/: capture.rs  mod.rs
crates/agent/src/runtime/: host.rs  mem_host.rs  mod.rs  orchestrator.rs  registry.rs  state_file.rs  watcher.rs
crates/version-proxy/: Cargo.toml
scratch/: decode_packets.py  hello.wasm  hello.wat  listen_packets.py  test_internals.wasm  test_internals.wat  test_mem.wasm  test_mem.wat
(+70 files in other folders)
